wither_derive/tests/fail/field-id-incorrect-type.stderr
error[E0308]: mismatched types
 --> $DIR/field-id-incorrect-type.rs:4:34
  |
4 | #[derive(Serialize, Deserialize, Model)]
  |                                  ^^^^^
  |                                  |
  |                                  expected struct `std::string::String`, found `usize`
  |                                  expected `std::option::Option<std::string::String>` because of return type
  |
  = note: expected enum `std::option::Option<std::string::String>`
             found enum `std::option::Option<usize>`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/field-id-incorrect-type.rs:4:34
  |
4 | #[derive(Serialize, Deserialize, Model)]
  |                                  ^^^^^ expected `usize`, found struct `std::string::String`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
